--- a/index.html
+++ b/index.html
@@ -92,34 +92,17 @@
       options: {
         responsive: true,
         maintainAspectRatio: false,
-        scales: {
-          'y-tegangan': {
-            type: 'linear',
-            position: 'left',
-            title: {
-              display: true,
-              text: 'Tegangan (V)'
-            },
-            min: 11.5,
-            max: 14.5
-          },
-          'y-arus': {
-            type: 'linear',
-            position: 'right',
-            title: {
-              display: true,
-              text: 'Arus (I)'
-            },
-            min: 0,
-            max: 2,
-            grid: {
-              drawOnChartArea: false
-            }
-          }
+        interaction: {
+          mode: 'index',
+          intersect: false
         },
         plugins: {
           legend: {
             position: 'bottom'
+          },
+          tooltip: {
+            mode: 'index',
+            intersect: false
           },
           zoom: {
             pan: {
@@ -131,6 +114,31 @@
               pinch: { enabled: true },
               mode: 'x',
               drag: { enabled: false }
+            }
+          }
+        },
+        scales: {
+          'y-tegangan': {
+            type: 'linear',
+            position: 'left',
+            title: {
+              display: true,
+              text: 'Tegangan (V)'
+            },
+            min: 30.00,
+            max: 40.55
+          },
+          'y-arus': {
+            type: 'linear',
+            position: 'right',
+            title: {
+              display: true,
+              text: 'Arus (I)'
+            },
+            min: 0,
+            max: 1,
+            grid: {
+              drawOnChartArea: false
             }
           }
         }
